Add Login + Token

--- a/FFMpegCore.WebApi/wwwroot/index.html
+++ b/FFMpegCore.WebApi/wwwroot/index.html
@@ -20,45 +20,9 @@
                 <input type="password" id="password" name="password" required><br><br>
                 <button type="submit">Login</button>
             </form>
-        </section>
-            <!-- Merge Multiple Videos -->
-            <section id="mergeVideos">
-                <h2>Merge Multiple Videos</h2>
-                <form id="mergeVideosForm">
-                    <input type="file" id="videoFiles" name="videoFiles" accept="video/*" multiple>
-                    <input type="text" id="mergedVideoName" name="mergedVideoName" placeholder="Output File Name (e.g., merged.mp4)">
-                    <button type="submit">Merge Videos</button>
-                </form>
-            </section>
-
-            <!-- Merge Audio + Video -->
-            <section id="mergeAudioVideo">
-                <h2>Merge Audio with Video</h2>
-                <form id="mergeAudioVideoForm">
-                    <label for="audioFile">Audio File:</label>
-                    <input type="file" id="audioFile" name="audioFile" accept="audio/*">
-
-                    <label for="videoFileForAudio">Video File:</label>
-                    <input type="file" id="videoFileForAudio" name="videoFileForAudio" accept="video/*">
-
-                    <input type="text" id="audioVideoOutputName" name="audioVideoOutputName" placeholder="Output File Name (e.g., audio_video.mp4)">
-                    <button type="submit">Merge Audio + Video</button>
-                </form>
-            </section>
-
-            <!-- Progress and Output -->
-            <section id="progress">
-                <h2>Progress</h2>
-                <progress id="progressBar" max="100" value="0"></progress>
-                <p id="progressText">Progress: 0%</p>
-            </section>
-
-            <section id="output">
-                <h2>Output</h2>
-                <p id="outputMessage"></p>
-            </section>
+        </section>       
     </main>
-    <script src="/js/scripts.js"></script>
+     
 
     <script>
         document.getElementById('loginForm').addEventListener('submit', async (event) => {
@@ -78,10 +42,15 @@
 
                 if (response.ok) {
                     const data = await response.json();
-                    if (data.Token) {
-                        alert('Login successful! Your token: ' + data.Token);
-                        // Store the token in localStorage for future API requests
-                        localStorage.setItem('jwtToken', data.Token);
+                    if (data.token) {
+
+                        // Save the token to localStorage
+                        localStorage.setItem('jwtToken', data.token);
+
+                        // Redirect to the dashboard
+                        window.location.href = '/dashboard.html';
+
+
                     } else {
                         alert('Login successful, but no token received!');
                     }
