--- a/FFMpegCore.WebApi/wwwroot/dashboard.html
+++ b/FFMpegCore.WebApi/wwwroot/dashboard.html
@@ -49,6 +49,12 @@
             <p id="outputMessage"></p>
         </section>
     </main>
+    <footer>
+        <section id="swagger">
+            <!-- Link to Swagger -->
+            <a href="/swagger" target="_blank">Go to Swagger Documentation</a>
+        </section>
+    </footer>
     <script src="/js/scripts.js"></script>
     <script>
         // Retrieve the token from localStorage
