--- a/FFMpegCore.WebApi/wwwroot/dashboard.html
+++ b/FFMpegCore.WebApi/wwwroot/dashboard.html
@@ -12,42 +12,45 @@
         <p id="welcomeMessage">Loading...</p>
     </header>
     <main>
-        <!-- Merge Multiple Videos -->
-        <section id="mergeVideos">
-            <h2>Merge Multiple Videos</h2>
-            <form id="mergeVideosForm">
-                <input type="file" id="videoFiles" name="videoFiles" accept="video/*" multiple>
-                <input type="text" id="mergedVideoName" name="mergedVideoName" placeholder="Output File Name (e.g., merged.mp4)">
-                <button type="submit">Merge Videos</button>
-            </form>
-        </section>
+        <div id="sidebar-container"></div> <!-- Placeholder for the sidebar -->
+        <div class="content">
+            <!-- Merge Multiple Videos -->
+            <section id="mergeVideos">
+                <h2>Merge Multiple Videos</h2>
+                <form id="mergeVideosForm">
+                    <input type="file" id="videoFiles" name="videoFiles" accept="video/*" multiple>
+                    <input type="text" id="mergedVideoName" name="mergedVideoName" placeholder="Output File Name (e.g., merged.mp4)">
+                    <button type="submit">Merge Videos</button>
+                </form>
+            </section>
 
-        <!-- Merge Audio + Video -->
-        <section id="mergeAudioVideo">
-            <h2>Merge Audio with Video</h2>
-            <form id="mergeAudioVideoForm">
-                <label for="audioFile">Audio File:</label>
-                <input type="file" id="audioFile" name="audioFile" accept="audio/*">
+            <!-- Merge Audio + Video -->
+            <section id="mergeAudioVideo">
+                <h2>Merge Audio with Video</h2>
+                <form id="mergeAudioVideoForm">
+                    <label for="audioFile">Audio File:</label>
+                    <input type="file" id="audioFile" name="audioFile" accept="audio/*">
 
-                <label for="videoFileForAudio">Video File:</label>
-                <input type="file" id="videoFileForAudio" name="videoFileForAudio" accept="video/*">
+                    <label for="videoFileForAudio">Video File:</label>
+                    <input type="file" id="videoFileForAudio" name="videoFileForAudio" accept="video/*">
 
-                <input type="text" id="audioVideoOutputName" name="audioVideoOutputName" placeholder="Output File Name (e.g., audio_video.mp4)">
-                <button type="submit">Merge Audio + Video</button>
-            </form>
-        </section>
+                    <input type="text" id="audioVideoOutputName" name="audioVideoOutputName" placeholder="Output File Name (e.g., audio_video.mp4)">
+                    <button type="submit">Merge Audio + Video</button>
+                </form>
+            </section>
 
-        <!-- Progress and Output -->
-        <section id="progress">
-            <h2>Progress</h2>
-            <progress id="progressBar" max="100" value="0"></progress>
-            <p id="progressText">Progress: 0%</p>
-        </section>
+            <!-- Progress and Output -->
+            <section id="progress">
+                <h2>Progress</h2>
+                <progress id="progressBar" max="100" value="0"></progress>
+                <p id="progressText">Progress: 0%</p>
+            </section>
 
-        <section id="output">
-            <h2>Output</h2>
-            <p id="outputMessage"></p>
-        </section>
+            <section id="output">
+                <h2>Output</h2>
+                <p id="outputMessage"></p>
+            </section>
+        </div>
     </main>
     <footer>
         <section id="swagger">
@@ -56,41 +59,8 @@
         </section>
     </footer>
     <script src="/js/scripts.js"></script>
-    <script>
-        // Retrieve the token from localStorage
-        const token = localStorage.getItem('jwtToken');
-
-        if (!token) {
-            alert('You are not logged in!');
-            window.location.href = '/index.html'; // Redirect to login if no token
-        } else {
-            // Display a message with the token or fetch protected data
-            // document.getElementById('welcomeMessage').textContent = 'Welcome to the Dashboard! Your token: ' + token;
-            document.getElementById('welcomeMessage').textContent = 'Welcome to the Dashboard! Your ^_*';
-
-            // Example: Fetch protected data using the token
-            fetch('/api/auth/protected-endpoint', {
-                method: 'GET',
-                headers: {
-                    'Authorization': `Bearer ${token}`
-                }
-            })
-                .then(response => {
-                    if (response.ok) {
-                        return response.json();
-                    } else {
-                        throw new Error('Failed to fetch protected data.');
-                    }
-                })
-                .then(data => {
-                    console.log('Protected data:', data);
-                })
-                .catch(error => {
-                    console.error(error);
-                    alert('Failed to fetch protected data. Please log in again.');
-                    window.location.href = '/index.html'; // Redirect to login on error
-                });
-        }
-    </script>
+    <script src="/js/sidebar.js"></script>
+    <script src="/js/jwtToken.js"></script>
+    
 </body>
 </html>
