Autogenerate ouput path

--- a/FFMpegCore.WebApi/wwwroot/sidebar.html
+++ b/FFMpegCore.WebApi/wwwroot/sidebar.html
@@ -3,4 +3,5 @@
     <a href="/joblogs.html">Job Logs</a>
     <a href="/renderlogs.html">Render Logs</a>
     <a href="/settings.html">Settings</a>
+    <a href="/api-status.html">Api Status</a>
 </section>
