--- a/FFMpegCore.WebApi/wwwroot/dashboard.html
+++ b/FFMpegCore.WebApi/wwwroot/dashboard.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Dashboard</h1>
-        <p id="welcomeMessage" aria-live="polite">>Loading...</p>
+        <p id="welcomeMessage" aria-live="polite">Loading...</p>
     </header>
     <main>
         <div id="sidebar-container" aria-label="Sidebar"></div> <!-- Sidebar dynamically loaded -->
