--- a/FFMpegCore.WebApi/wwwroot/dashboard.html
+++ b/FFMpegCore.WebApi/wwwroot/dashboard.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Dashboard</h1>
-        <p id="welcomeMessage" aria-live="polite">Loading...</p>
+        <div id="login-detail-container"></div> <!-- Placeholder for login details -->
     </header>
     <main>
         <div id="sidebar-container" aria-label="Sidebar"></div> <!-- Sidebar dynamically loaded -->
