--- a/FFMpegCore.WebApi/wwwroot/renderlogs.html
+++ b/FFMpegCore.WebApi/wwwroot/renderlogs.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Render Logs</h1>
-        <p id="welcomeMessage">Loading...</p>
+        <div id="login-detail-container"></div> <!-- Placeholder for login details -->
     </header>
     <main>
         <div id="sidebar-container"></div> <!-- Placeholder for the sidebar -->
