--- a/FFMpegCore.WebApi/wwwroot/joblogs.html
+++ b/FFMpegCore.WebApi/wwwroot/joblogs.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Job Logs</h1>
-        <p id="welcomeMessage">Loading...</p>
+        <div id="login-detail-container"></div> <!-- Placeholder for login details -->
     </header>
     <main>
         <div id="sidebar-container"></div> <!-- Placeholder for the sidebar -->
