--- a/FFMpegCore.WebApi/wwwroot/dashboard.html
+++ b/FFMpegCore.WebApi/wwwroot/dashboard.html
@@ -22,8 +22,11 @@
             <section id="mergeVideosSection">
                 <h2>Merge Multiple Videos</h2>
                 <form id="mergeVideosForm">
-                    <label for="videoPaths">Select Video Files:</label>
-                    <input type="file" id="videoPaths" name="videoPaths" accept="video/*" multiple>
+                    <label for="fileList">Select Video Files:</label>
+                    <div id="fileCheckboxContainer">
+                        <!-- Checkboxes will be dynamically populated -->
+                    </div>
+                    <textarea id="selectedFiles" name="selectedFiles" placeholder="Selected files will appear here..." readonly></textarea>
                     <button type="submit">Merge Videos</button>
                 </form>
                 <p id="outputMessage"></p> <!-- Placeholder for success or error messages -->
