--- a/FFMpegCore.WebApi/wwwroot/dashboard.html
+++ b/FFMpegCore.WebApi/wwwroot/dashboard.html
@@ -59,6 +59,22 @@
                 <p id="outputMessage3"></p> <!-- Placeholder for success or error messages -->
             </section>
 
+            <!-- Video Caption -->
+            <section id="addVideoCaption">
+                <h1>Caption Video</h1>
+                <form id="addVideoCaptionForm">
+                    <label for="fileList4">Select Video Files:</label>
+                    <div id="fileCheckboxContainer4">
+                        <!-- Checkboxes will be dynamically populated -->
+                    </div>
+                    <label for="captionText">Caption Text:</label><br>
+                    <textarea id="captionText" name="captionText" placeholder="Enter caption text" rows="4" cols="50" required></textarea><br><br>
+
+                    <button type="submit">Submit</button>
+                </form>
+                <p id="outputMessage4"></p> <!-- Placeholder for success or error messages -->
+            </section>
+
             <!-- Progress and Output -->
             <section id="progress">
                 <h2>Progress</h2>
